--- a/trunk/mscore/mscore/prefsdialog.ui
+++ b/trunk/mscore/mscore/prefsdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>721</width>
-    <height>505</height>
+    <width>772</width>
+    <height>534</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -1938,6 +1938,29 @@
               </spacer>
              </item>
             </layout>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item>
+        <widget class="QGroupBox" name="groupBox_14">
+         <property name="title">
+          <string>Default Soundfont</string>
+         </property>
+         <layout class="QHBoxLayout" name="horizontalLayout_11">
+          <item>
+           <widget class="QLineEdit" name="soundFont"/>
+          </item>
+          <item>
+           <widget class="QToolButton" name="sfOpenButton">
+            <property name="text">
+             <string>...</string>
+            </property>
+            <property name="icon">
+             <iconset resource="mscore.qrc">
+              <normaloff>:/data/fileopen.svg</normaloff>:/data/fileopen.svg</iconset>
+            </property>
            </widget>
           </item>
          </layout>
