--- a/trunk/mscore/mscore/pagesettings.ui
+++ b/trunk/mscore/mscore/pagesettings.ui
@@ -20,7 +20,7 @@
    <property name="spacing">
     <number>6</number>
    </property>
-   <item row="0" column="2">
+   <item row="0" column="2" rowspan="2">
     <widget class="QGroupBox" name="previewGroup">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -33,7 +33,7 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="0" colspan="3">
+   <item row="2" column="0" colspan="3">
     <layout class="QHBoxLayout">
      <property name="spacing">
       <number>6</number>
@@ -522,6 +522,19 @@
       </widget>
      </item>
     </layout>
+   </item>
+   <item row="1" column="0">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
