--- a/trunk/mscore/mscore/measureproperties.ui
+++ b/trunk/mscore/mscore/measureproperties.ui
@@ -172,7 +172,7 @@
              <number>1</number>
             </property>
             <property name="maximum">
-             <number>9999</number>
+             <number>63</number>
             </property>
            </widget>
           </item>
@@ -200,7 +200,14 @@
            </spacer>
           </item>
           <item row="1" column="4" colspan="2">
-           <widget class="Awl::DenominatorSpinBox" name="actualN"/>
+           <widget class="Awl::DenominatorSpinBox" name="actualN">
+            <property name="minimum">
+             <number>1</number>
+            </property>
+            <property name="maximum">
+             <number>32</number>
+            </property>
+           </widget>  
           </item>
           <item row="0" column="4" colspan="2">
            <widget class="QLabel" name="nominalN">
