--- a/mscore/mscore/element.ui
+++ b/mscore/mscore/element.ui
@@ -64,9 +64,23 @@
          </spacer>
         </item>
         <item>
+         <widget class="QLabel" name="label_9">
+          <property name="text">
+           <string>Score:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
          <widget class="QLabel" name="score">
           <property name="text">
            <string>0</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_12">
+          <property name="text">
+           <string>Addr.:</string>
           </property>
          </widget>
         </item>
