--- a/trunk/mscore/mscore/prefsdialog.ui
+++ b/trunk/mscore/mscore/prefsdialog.ui
@@ -2191,7 +2191,7 @@
        <item>
         <widget class="QGroupBox" name="groupBox_9">
          <property name="title">
-          <string>PNG</string>
+          <string>PNG/SVG</string>
          </property>
          <property name="flat">
           <bool>false</bool>
@@ -2201,16 +2201,6 @@
            <widget class="QLabel" name="label_4">
             <property name="text">
              <string>Resolution DPI</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="1">
-           <widget class="QSpinBox" name="pngResolution">
-            <property name="minimum">
-             <number>30</number>
-            </property>
-            <property name="maximum">
-             <number>3000</number>
             </property>
            </widget>
           </item>
@@ -2233,6 +2223,19 @@
              </size>
             </property>
            </spacer>
+          </item>
+          <item row="0" column="1">
+           <widget class="QDoubleSpinBox" name="pngResolution">
+            <property name="minimum">
+             <double>32.000000000000000</double>
+            </property>
+            <property name="maximum">
+             <double>5000.000000000000000</double>
+            </property>
+            <property name="value">
+             <double>300.000000000000000</double>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
